// Utils.ValidationUtils.java

package Utils;

public class ValidationUtils {
    public static final String VALID_GUESS_PATTERN = "[0-7]{4}";
}